cluster/external/klipper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: klipper
spec:
  type: ExternalName
  externalName: klipper.${SECRET_PRIVATE_DOMAIN}.
  ports:
    - port: 80
